# vgpu.rs

./: .gitignore  .pre-commit-config.yaml  .releaserc  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  README.md  SECURITY.md  a.patch  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.ruler/: ai-assistant-guidelines.md  architectural.md  general-rules.md  mcp.json  rust-coding-style.md  rust-dependency-practices.md  (+5 more)
crates/cuda-limiter/: Cargo.toml  build.rs  cbindgen.toml
crates/cuda-limiter-test/: Cargo.toml  build.rs
crates/cuda-limiter-test/src/: cuda_test.cu  integration_test.rs  lib.rs  test_setup.rs
crates/cuda-limiter/include/: cuda_limiter.h
crates/cuda-limiter/src/: auto_freeze.rs  checkpoint.rs  command_handler.rs  config.rs  culib.rs  detour.rs  lib.rs  limiter.rs  nvmllib.rs
crates/cuda-limiter/src/detour/: gpu.rs  mem.rs  mod.rs  nvml.rs
crates/erl/: Cargo.toml
crates/erl/proptest-regressions/: fuzz_tests.txt
crates/erl/src/: backend.rs  cost_tracker.rs  cubic.rs  error.rs  fuzz_tests.rs  hypervisor.rs  lib.rs  limiter.rs  pi_controller.rs  pid.rs  state.rs  token_manager.rs  traits.rs  utilization_controller.rs  workload_calc.rs
crates/http-bidir-comm/: Cargo.toml
crates/http-bidir-comm/src/: config.rs  error.rs  event_client.rs  lib.rs  poem.rs  server.rs  types.rs
crates/http-bidir-comm/tests/: integration_tests.rs  simple_tests.rs  sse_integration.rs
crates/hypervisor/: Cargo.toml  build.rs
crates/hypervisor/proto/: device_plugin.proto  pod_resources.proto
crates/hypervisor/src/: api.rs  app.rs  app_builder.rs  config.rs  gpu_allocation_watcher.rs  gpu_init.rs  gpu_observer.rs  host_pid_probe.rs  hyper.rs  hypervisor.rs  kube_client.rs  lib.rs  limiter_comm.rs  limiter_coordinator.rs  logging.rs  main.rs  metrics.rs  process.rs  scheduler.rs  tui_workers.rs  worker_manager.rs  worker_registration.rs  worker_watcher.rs
crates/hypervisor/src/api/: auth.rs  errors.rs  handlers.rs  mod.rs  server.rs  storage.rs  types.rs
crates/hypervisor/src/app/: builder.rs  core.rs  mod.rs  services.rs  tasks.rs
crates/hypervisor/src/cli/: commands.rs
crates/hypervisor/src/cmd/: daemon.rs  local.rs  mod.rs  shm.rs  tui.rs
crates/hypervisor/src/config/: cli.rs  daemon.rs  gpu.rs  local.rs  mod.rs  shm.rs
crates/hypervisor/src/controller/: auth.rs  handlers.rs  mod.rs  server.rs
crates/hypervisor/src/core/: command.rs  hypervisor.rs  mod.rs  types.rs
crates/hypervisor/src/core/metrics/: collector.rs  mod.rs
crates/hypervisor/src/core/pod/: coordinator.rs  device_info.rs  manager.rs  mock.rs  mod.rs  pod_state_store.rs  sampler.rs  traits.rs  types.rs  utilization.rs
crates/hypervisor/src/core/process/: mod.rs  worker.rs
crates/hypervisor/src/core/scheduler/: mod.rs
crates/hypervisor/src/core/scheduler/weighted/: decision_engine.rs  mod.rs  scheduler.rs  types.rs  weight_calculator.rs
crates/hypervisor/src/domain/: hypervisor.rs  mod.rs
crates/hypervisor/src/domain/pod_management/: coordinator.rs  device_info.rs  manager.rs  mock.rs  mod.rs  pod_state_store.rs  registration.rs  registry.rs  resource_tracker.rs  sampler.rs  traits.rs  types.rs  utilization.rs
crates/hypervisor/src/domain/pod_management/core/: registry.rs
crates/hypervisor/src/domain/process/: mod.rs  worker.rs
crates/hypervisor/src/domain/scheduler/: mod.rs
crates/hypervisor/src/domain/scheduler/weighted/: decision_engine.rs  mod.rs  queue_manager.rs  scheduler.rs  types.rs  weight_calculator.rs
crates/hypervisor/src/infrastructure/: gpu_device_state_watcher.rs  gpu_init.rs  gpu_observer.rs  gpu_watcher.rs  host_pid_probe.rs  kube_client.rs  limiter_comm.rs  logging.rs  mod.rs
crates/hypervisor/src/infrastructure/k8s/: mod.rs  pod_info.rs  pod_info_cache.rs  pod_watcher.rs  types.rs
crates/hypervisor/src/infrastructure/metrics/: mod.rs  pod_metrics.rs
crates/hypervisor/src/infrastructure/metrics/encoders/: influx.rs  json.rs  mod.rs
crates/hypervisor/src/k8s/: annotations.rs  device_plugin.rs  mod.rs  pod_info.rs  pod_watcher.rs  types.rs
crates/hypervisor/src/metrics/: mod.rs
crates/hypervisor/src/metrics/encoders/: influx.rs  json.rs  mod.rs
crates/hypervisor/src/platform/: host_pid_probe.rs  kube_client.rs  limiter_comm.rs  mod.rs
crates/hypervisor/src/platform/k8s/: device_plugin.rs  mod.rs  pod_info.rs  pod_info_cache.rs
crates/hypervisor/src/platform/metrics/: mod.rs
crates/hypervisor/src/platform/metrics/encoders/: influx.rs  json.rs  mod.rs
crates/hypervisor/src/platform/nvml/: gpu_device_state_watcher.rs  gpu_init.rs  gpu_observer.rs  mod.rs
crates/hypervisor/src/platform/shared_mem/: mod.rs
crates/hypervisor/src/pod_management/: coordinator.rs  manager.rs  registration.rs  registry.rs  utilization.rs
crates/hypervisor/src/process/: worker.rs
crates/hypervisor/src/scheduler/: fifo.rs  random1.rs  weighted.rs
crates/hypervisor/src/tui/: app.rs  dialog.rs  mod.rs  reader.rs  state.rs  table.rs  types.rs
crates/hypervisor/src/tui/components/: dialog.rs  mod.rs  table.rs  utils.rs
crates/hypervisor/src/tui/handlers/: app.rs  event_loop.rs  mod.rs
crates/hypervisor/src/ui/: mod.rs
crates/hypervisor/src/ui/tui/: mod.rs  state.rs  types.rs
crates/hypervisor/src/ui/tui/components/: dialog.rs  mod.rs  table.rs
crates/hypervisor/src/ui/tui/handlers/: app.rs  event_loop.rs  mod.rs
crates/hypervisor/src/util/: builder.rs  core.rs  keyed_lock.rs  logging.rs  mod.rs  services.rs  tasks.rs
crates/integration-test/: Cargo.toml  build.rs
crates/integration-test/src/: cuda_test.cu  hypervisor_integration_test.rs  integration_framework.rs  lib.rs  limiter_integration_test.rs  test_setup.rs
crates/trap/: Cargo.toml
crates/trap/src/: dummy.rs  http.rs  ipc.rs  lib.rs
crates/trap/tests/: ipc_tests.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/src/: build_info.rs  hooks.rs  keyed_lock.rs  lib.rs  logging.rs  macros.rs  shared_memory.rs  version.rs
crates/utils/src/shared_memory/: bitmap.rs  erl_adapter.rs  handle.rs  manager.rs  mod.rs  mutex.rs  set.rs  traits.rs
(+60 files in other folders)
