[workspace]
resolver = "2"
members = [
  "crates/add-path",
  "crates/api-types",
  "crates/cuda-limiter",
  "crates/hypervisor",
  "crates/macro",
  "crates/utils",
  "crates/trap",
  "crates/http-bidir-comm",
  "crates/bootstrap",
]
exclude = [
  "crates/integration-test",
]

[workspace.dependencies]
api-types = { path = "crates/api-types" }
trap = { path = "crates/trap" }
utils = { path = "crates/utils" }
tf-macro = { path = "crates/macro" }
http-bidir-comm = { path = "crates/http-bidir-comm" }
tracing = "0.1"
thiserror = "2.0"
derive_more = "1.0"
base64 = "0.22"
tracing-subscriber = "0.3"
ctor = "0.4"
ipc-channel = "0.19.0"
vergen-git2 = "1.0.1"
anyhow = "1.0.98"
nvml-wrapper = "0.11.0"
nvml-wrapper-sys = "0.9.0"
cudarc = "0.16.6"
serde = "1.0"
serde_json = "1.0"
tracing-appender = "0.2.3"
clap = "4.5"
once_cell = "1.19"
# Kubernetes dependencies
kube = { version = "0.87", features = ["runtime", "derive", "rustls-tls", "client", "config"], default-features = false }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = "1.0"
error-stack = "0.4"
futures = "0.3"
# Other dependencies
priority-queue = "2.5.0"
serde_yaml = "0.9"
influxdb-line-protocol = "2.0.0"
# Web framework dependencies
poem = { version = "3.1", features = ["sse", "test"] }
frida-gum = { git = "https://github.com/frida/frida-rust", rev = "e5840dfd5c0c99b74d58adcdd00e10521d0ffd0f" }
libc = "0.2.174"
tempfile = "3.20.0"
cbindgen = "0.29"
# Proc-macro dependencies
proc-macro2 = "1"
quote = "1"
syn = "2"
# Build dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
flate2 = "1.0"
tar = "0.4"
# HTTP trap dependencies
axum = "0.7"
uuid = "1.8"
chrono = "0.4"
# Test dependencies
similar-asserts = "1.5"
test-log = "0.2"
async-stream = "0.3"
tokio-stream = "0.1"
reqwest-eventsource = "0.6"
futures-util = "0.3"
eventsource = "0.5"
url = "2.5"
