[workspace]
resolver = "2"
members = [
  "crates/add-path",
  "crates/api-types",
  "crates/cuda-limiter",
  "crates/hypervisor",
  "crates/macro",
  "crates/utils",
  "crates/trap",
  "crates/http-bidir-comm",
  "crates/bootstrap",
  "crates/integration-test",
  "crates/erl"
]

[workspace.dependencies]
api-types = { path = "crates/api-types" }
hypervisor = { path = "crates/hypervisor" }
trap = { path = "crates/trap" }
utils = { path = "crates/utils" }
tf-macro = { path = "crates/macro" }
http-bidir-comm = { path = "crates/http-bidir-comm" }
tracing = "0.1"
thiserror = "2.0"
derive_more = "2.0"
base64 = "0.22"
tracing-subscriber = "0.3"
ctor = "0.4"
ipc-channel = "0.19.0"
vergen-git2 = "1.0.1"
anyhow = "1.0.100"
nvml-wrapper = "0.11.0"
nvml-wrapper-sys = "0.9.0"
cudarc = "0.16.6"
serde = "1.0"
serde_json = "1.0"
tracing-appender = "0.2.3"
clap = "4.5"
once_cell = "1.19"
kube = { version = "0.87", features = ["runtime", "derive", "rustls-tls", "client", "config"], default-features = false }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = "1.47"
error-stack = "0.4"
futures = "0.3"
proptest = "1.4"
proptest-derive = "0.4"
priority-queue = "2.7.0"
serde_yaml = "0.9"
influxdb-line-protocol = "2.0.0"
poem = { version = "3.1", features = ["sse", "test"] }
frida-gum = { version = "0.17" }
libc = "0.2.176"
tempfile = "3.23.0"
proc-macro2 = "1"
quote = "1"
syn = "2"
reqwest = { version = "0.12", default-features = false }
uuid = "1.18"
chrono = "0.4"
similar-asserts = "1.5"
test-log = "0.2"
async-stream = "0.3"
eventsource = { git="https://github.com/NexusGPU/eventsource.git" }
url = "2.5"
libloading = "0.8"
shared_memory = { git="https://github.com/NexusGPU/shared_memory.git", rev="d679661" }
tower = "0.5"
schemars = "0.8"
glob = "0.3"
async-trait = "0.1"
dashmap = "6.1"
rand = "0.9"
