[workspace]
resolver = "2"
members = [
  "crates/add-path",
  "crates/api-types",
  "crates/cuda-limiter",
  "crates/hypervisor",
  "crates/macro",
  "crates/utils",
  "crates/trap",
  "crates/http-bidir-comm",
  "crates/bootstrap",
  "crates/integration-test",
  "crates/erl"
]

[workspace.dependencies]
api-types = { path = "crates/api-types" }
hypervisor = { path = "crates/hypervisor" }
trap = { path = "crates/trap" }
utils = { path = "crates/utils" }
tf-macro = { path = "crates/macro" }
http-bidir-comm = { path = "crates/http-bidir-comm" }
erl = { path = "crates/erl" }
tracing = "0.1"
thiserror = "2.0"
derive_more = "2.0"
base64 = "0.22"
tracing-subscriber = "0.3"
ctor = "0.6"
ipc-channel = "0.20.2"
vergen-git2 = "1.0.1"
anyhow = "1.0.100"
nvml-wrapper = "0.11.0"
nvml-wrapper-sys = "0.9.0"
cudarc = "0.18.1"
serde = "1.0"
serde_json = "1.0"
tracing-appender = "0.2.3"
clap = "4.5"
once_cell = "1.19"
kube = { version = "2.0", default-features = false }
k8s-openapi = "0.26"
tokio = "1.48"
error-stack = "0.6"
futures = "0.3"
priority-queue = "2.7.0"
serde_yaml = "0.9"
influxdb-line-protocol = "2.0.0"
poem = "3.1"
frida-gum = "0.17"
libc = "0.2.177"
tempfile = "3.23.0"
proc-macro2 = "1"
quote = "1"
syn = "2"
reqwest = { version = "0.12", default-features = false }
uuid = "1.18"
chrono = "0.4"
similar-asserts = "1.5"
serial_test = "3.2"
test-log = "0.2"
async-stream = "0.3"
eventsource = { git="https://github.com/NexusGPU/eventsource.git" }
url = "2.5"
libloading = "0.8"
shared_memory = { git="https://github.com/NexusGPU/shared_memory.git", rev="d679661" }
tower = "0.5"
schemars = "1.1"
glob = "0.3"
async-trait = "0.1"
dashmap = "6.1"
rand = "0.9"
