[package]
name = "cuda-limiter-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda-limiter = { path = "../cuda-limiter" }
clap = { version = "4.4", features = ["derive"] }
cudarc = { version = "0.16.4", default-features = false, features = [
  "std",
  "driver",
  "dynamic-loading",
  "cuda-11080"
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"
once_cell = "1.19"
tracing = "0.1"
utils = { path = "../utils" }
ctor = "0.2"
