[package]
name = "cuda-limiter-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda-limiter = { path = "../cuda-limiter" }
clap = { workspace = true, features = ["derive"] }
cudarc = { workspace = true, features = ["std", "driver", "dynamic-loading", "cuda-11080"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
glob = "0.3"
once_cell = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }
ctor = { workspace = true }
nvml-wrapper = { workspace = true }
