[package]
name = "cuda-limiter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
trap = { workspace = true }
tf-macro = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }
ctor = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
nvml-wrapper = { workspace = true }
nvml-wrapper-sys = { workspace = true }
cudarc = { workspace = true, features = ["std", "driver", "dynamic-loading", "cuda-11080"] }

[build-dependencies]
cbindgen = { workspace = true }
