[package]
name = "cuda-limiter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
api-types = { workspace = true }
trap = { workspace = true }
tf-macro = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }
ctor = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
cudarc = { workspace = true, features = ["std", "driver", "dynamic-loading", "cuda-11080"] }
reqwest = { workspace = true, features = ["json", "blocking", "rustls-tls"], default-features = false }
error-stack = { workspace = true }
http-bidir-comm = { workspace = true }
libloading = { workspace = true }
nvml-wrapper = { workspace = true }
nvml-wrapper-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
