[package]
name = "http-bidir-comm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
error-stack = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking", "rustls-tls", "stream"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
derive_more = { workspace = true, features = ["display", "error", "from"] }
poem = { workspace = true }
async-stream = { workspace = true }
eventsource = { workspace = true }
url = { workspace = true }

[dev-dependencies]
bytes = "1"
similar-asserts = "1.5.0"
test-log = { workspace = true } 