[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
api-types = { workspace = true }
nvml-wrapper = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
priority-queue = { workspace = true }
trap = { workspace = true, features = ["http"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
utils = { workspace = true }
influxdb-line-protocol = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
base64 = { workspace = true }
# Kubernetes dependencies
kube = { workspace = true, features = ["runtime", "derive"] }
k8s-openapi = { workspace = true, features = ["v1_28"] }
tokio = { workspace = true, features = ["full"] }
error-stack = { workspace = true }
futures.workspace = true
poem = { workspace = true }
http-bidir-comm = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-util = "0.7.15"
tokio-stream = "0.1.15"
tonic = "0.13"
tower = { workspace = true }
device-plugin-pb = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[dev-dependencies]
async-trait = "0.1.77"
similar-asserts = { workspace = true }
test-log = { workspace = true }
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = { workspace = true }
