[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
api-types = { workspace = true }
nvml-wrapper = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
priority-queue = { workspace = true }
trap = { workspace = true, features = ["http"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
utils = { workspace = true }
influxdb-line-protocol = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
thiserror = { workspace = true }
base64 = { workspace = true }
# Kubernetes dependencies
kube = { workspace = true, features = ["runtime", "derive"] }
k8s-openapi = { workspace = true, features = ["v1_28"] }
tokio = { workspace = true, features = ["full"] }
error-stack = { workspace = true }
futures.workspace = true
poem = { workspace = true }
http-bidir-comm = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-util = "0.7.16"
tokio-stream = "0.1.15"
tower = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
schemars = { workspace = true }
notify = "8.2"
cudarc = { workspace = true, features = ["std", "driver", "dynamic-loading", "cuda-11080"] }
libc = { workspace = true }
ratatui = "0.29"
crossterm = "0.29"
glob = "0.3"
async-trait = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
# gRPC dependencies for kubelet pod-resources API
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build  = "0.14"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[dev-dependencies]
similar-asserts = { workspace = true }
test-log = { workspace = true }
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = { workspace = true }
