[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
trap = { path = "../trap" }
api_types = { path = "../api-types" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
once_cell = "1.19"
tracing = "0.1"
utils = { path = "../utils" }
ctor = "0.4"
nvml-wrapper = "0.11.0"
tempfile = "3.20.0"

[build-dependencies]
reqwest = { version = "0.12", features = ["stream", "blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
