[package]
name = "trap"
version = "0.1.0"
edition = "2021"

[dependencies]
ipc-channel = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
