[package]
name = "utils"
version = "0.1.0"
edition = "2021"



[dependencies]
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
frida-gum = { workspace = true, features = ["auto-download" ,"std", "invocation-listener"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
shared_memory = { workspace = true }
libc = "0.2.178"
glob = { workspace = true }
erl = { path = "../erl" }
error-stack = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
dashmap = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-git2 = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
